# CLE-assignment1

weather-stations/: CMakeLists.txt
weather-stations/src/: Threadpool.cpp  Threadpool.hpp  main.cpp
